force-app/main/default/objects/AH_Case_Triage_Mapping__c/AH_Case_Triage_Mapping__c.object-meta.xml
<CustomObject>
    <description>NICC-048831 - This object stores the mapping data referenced by Amadeus Robotic Process Automation.</description>
    <label>AH Case Triage Mapping</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AH Case Triage Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>