force-app/main/default/objects/AH_Case_Triage_Mapping__c/fields/Case_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Case_Product_Line__c</fullName>
    <description>NICC-048831 - Used by ARPA case triage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When populated, this is the value of the Case Product Line picklist that will be selected for the case.</inlineHelpText>
    <label>Case Product Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>