force-app/main/default/objects/AH_Case_Triage_Mapping__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <description>NICC-048831 - Used by ARPA case triage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When populated, this is the value of the Component picklist that will be selected for the case.</inlineHelpText>
    <label>Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>