force-app/main/default/objects/AH_Case_Triage_Mapping__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <description>NICC-048831 - Used by ARPA case triage.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Optional information about the user or team who requested this mapping configuration.</inlineHelpText>
    <label>Requested By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>