force-app/main/default/objects/AH_Case_Triage_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Record_Type__c</columns>
    <columns>Match_Type__c</columns>
    <columns>Text_String_for_Match__c</columns>
    <columns>Case_Product_Line__c</columns>
    <columns>Module__c</columns>
    <columns>Component__c</columns>
    <columns>Active__c</columns>
    <columns>Queue_Assignment_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>